# RayTracer

./: .gitignore  CMakeLists.txt  README.md  Tuple.cpp  Tuple.h  tests.cpp
source/: Canvas.cpp  Canvas.h  CanvasExporter.cpp  CanvasExporter.h  Color.cpp  Color.h  FloatHelper.cpp  FloatHelper.h  Matrix.cpp  Matrix.h  Projectile.h
tests/: CanvasExporterTests.cpp  CanvasTests.cpp  ClockTests.cpp  ColorTestHelpers.cpp  ColorTestHelpers.h  ColorTests.cpp  MatrixTests.cpp  ProjectileTests.cpp  TransformationTests.cpp  TupleTests.cpp
